# rsmdu

./: .gitignore  BUILD_INSTRUCTIONS.md  Cargo.toml  README.md  pyproject.toml
.claude/commands/: marimo-check.md 
.claude/hooks/: marimo-check.sh
.claude/skills/anywidget-generator/: SKILL.md
.claude/skills/setup-maturin-lib/: SKILL.md
.cursor/commands/: commit-et-push.md
.github/workflows/: deploy-pages.yml  release-python.yml
examples/: FRA_AC_La.Rochelle.Intl.AP.073160_TMYx_UWG.epw  README.md  agen_2025.epw  athens_2023.epw  bordeaux_2025.epw  building_basic.py  building_from_ign.py  cadastre_from_ign.py  configsolweig.ini  cosia_from_ign.py  dem_from_ign.py  iris_from_ign.py  la_rochelle_2025.epw  lcz_from_url.py  lidar_from_wfs.py  niort_2025.epw  parametersforsolweig.json  rnb_from_api.py  road_from_ign.py  rochefort_2025.epw  test_cosia.py  umep_workflow.py  umep_workflow_new.py  vegetation_from_ign.py  water_from_ign.py
examples/working/: svf.tif  svfE.tif  svfN.tif  svfS.tif  svfW.tif
notebooks/: configsolweig.ini  umep_workflow.py
notebooks/__marimo__/session/: umep_workflow.py.json
notebooks/output/: Tmrt_average.tif
notebooks/output/umep_workflow/: CDSM.tif.aux.xml  DEM_clip.tif  landcover.tif.aux.xml  landcover_clip.tif
notebooks/temp/: cosia.tiff
py-rsmdu/: BUILD_INSTRUCTIONS.md  Cargo.toml  MATURIN_ANALYSIS.md  README.md  pyproject.toml
py-rsmdu/examples/: README.md  building_basic.py  building_from_ign.py  cadastre_from_ign.py  dem_from_ign.py  iris_from_ign.py  lcz_from_url.py
py-rsmdu/src/: lib.rs
py-rsmdu/src/bindings/: bounding_box.rs  building.rs  cadastre.rs  dem.rs  geo_core.rs  iris.rs  lcz.rs  mod.rs
py-rsmdu/tests/: test_basic.py
pymdurs/: BUILD_INSTRUCTIONS.md  Cargo.toml  MATURIN_ANALYSIS.md  README.md  __init__.py  pyproject.toml
pymdurs/examples/: README.md  building_from_ign.py  cadastre_from_ign.py  dem_from_ign.py  iris_from_ign.py  land_cover_from_components.py  lcz_from_url.py  lidar_from_wfs.py
pymdurs/examples/temp/: dem.tiff
pymdurs/src/: lib.rs
pymdurs/src/bindings/: bounding_box.rs  building.rs  cadastre.rs  cosia.rs  dem.rs  geo_core.rs  iris.rs  land_cover.rs  lcz.rs  lidar.rs  mod.rs  rnb.rs  road.rs  vegetation.rs  water.rs
pymdurs/tests/: test_basic.py
rsmdu/: Cargo.toml
rsmdu-core/: Cargo.toml
rsmdu-core/examples/: README.md  building_complete.rs  building_from_geojson.rs  building_from_ign_api.rs  building_manual.rs  iris_from_ign.rs  lcz_from_url.rs
rsmdu-core/src/: lib.rs
rsmdu-core/src/collect/: global_variables.rs
rsmdu-core/src/collect/ign/: ign_collect.rs  mod.rs
rsmdu-core/src/collect/ign/data/: Tableau-suivi-services-web-23-05-2025.csv
rsmdu-core/src/commons/: basic_functions.rs
rsmdu-core/src/geometric/: lcz.rs  mod.rs
rsmdu-wasm/: Cargo.toml  INSTALL_WASM_TARGET.md  README.md  build.sh  fix-wasm-target.sh
rsmdu-wasm/examples/: dem.html  index.html
rsmdu-wasm/src/: lib.rs
rsmdu/examples/: README.md  building_complete.rs  building_from_geojson.rs  building_from_ign.rs  building_from_ign_api.rs  building_manual.rs  cadastre_from_ign.rs  cosia_from_ign.rs  dem_from_ign.rs  iris_from_ign.rs  lcz_from_url.rs  rnb_from_api.rs  road_from_ign.rs  vegetation_from_ign.rs  water_from_ign.rs
rsmdu/src/: geo_core.rs  lib.rs  main.rs
rsmdu/src/collect/: mod.rs
rsmdu/src/collect/ign/: ign_collect.rs
rsmdu/src/collect/ign/data/: Tableau-suivi-services-web-01-08-2025.csv  Tableau-suivi-services-web-06-02-2026.csv  Tableau-suivi-services-web-23-05-2025.csv
rsmdu/src/commons/: mod.rs
rsmdu/src/geometric/: building.rs  cadastre.rs  cosia.rs  dem.rs  iris.rs  land_cover.rs  lcz.rs  lidar.rs  mod.rs  rnb.rs  road.rs  vegetation.rs  water.rs
