[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[project]
name = "pymdurs"
version = "0.1.1"
description = "Rust transpilation of pymdu (Python Urban Data Model) - Python bindings"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0" }
authors = [
    { name = "Boris Brangeon", email = "boris.brangeon@plateforme-tipee.com" }
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=2.0.2",
    "geopandas>=1.0.1",
    "rasterio>=1.4.3",
    "umep>=0.0.1a18",
    "umepr @ git+https://github.com/UMEP-dev/solweig.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
console_output_style = "count"
log_cli = true
log_cli_level = "INFO"
addopts = "-s"

[tool.maturin]
manifest-path = "pymdurs/Cargo.toml"
features = []
module-name = "pymdurs"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[dependency-groups]
dev = [
    "marimo[recommended]>=0.19.6",
]
