[package]
name = "pymdurs"
version.workspace = true
edition.workspace = true
description = "Python bindings for rsmdu - Rust transpilation of pymdu"
license.workspace = true
authors.workspace = true

[lib]
name = "pymdurs"
crate-type = ["cdylib"]

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py38"] }

# Core rsmdu library
rsmdu = { path = "../rsmdu" }

# GeoJSON for bindings
geojson = "0.24"

# Note: Polars DataFrame conversion will be handled via Python polars package
# We don't need polars with python feature here

