[package]
name = "pymdurs"
version = "0.1.0"
edition = "2021"
description = "Python bindings for rsmdu - Rust transpilation of pymdu"

[lib]
name = "pymdurs"
crate-type = ["cdylib"]

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py38"] }

# Core rsmdu library
rsmdu = { path = "../rsmdu" }

# GeoJSON for bindings
geojson = "0.24"
gdal = "0.19.0"

# Note: Polars DataFrame conversion will be handled via Python polars package
# We don't need polars with python feature here

