[package]
name = "pymdurs"
version = "0.1.1"
edition = "2021"
description = "Python bindings for rsmdu - Rust transpilation of pymdu"
license = "GPL-3.0"
repository = "https://github.com/rupeelab17/rsmdu"
homepage = "https://github.com/rupeelab17/rsmdu"
documentation = "https://github.com/rupeelab17/rsmdu#readme"

[features]
default = ["lidar-copc"]
# COPC (Cloud Optimized Point Cloud) support via las::copc::CopcEntryReader
lidar-copc = ["rsmdu/lidar-copc"]

[lib]
name = "pymdurs"
crate-type = ["cdylib"]

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.27.2", features = ["extension-module", "abi3-py38"] }

# Core rsmdu library
rsmdu = { path = "../rsmdu", default-features = true, features = ["rayon", "lidar-copc"] }

# GeoJSON for bindings
geojson = "0.24"
gdal = { version = "0.19.0", features = ["bindgen"] }

# Note: Polars DataFrame conversion will be handled via Python polars package
# We don't need polars with python feature here

