[package]
name = "rsmdu-wasm"
version.workspace = true
edition.workspace = true
description = "WebAssembly bindings for rsmdu - Building GeoJSON processing"
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core geospatial libraries (WASM-compatible)
geo = { version = "0.28", features = ["serde"] }
geojson = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Window",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

# URL encoding
urlencoding = "2.1"

# Error handling
anyhow = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization
panic = "abort"     # Smaller binary size

