[package]
name = "rsmdu"
version = "0.1.0"
edition = "2021" 
description = "Rust transpilation of pymdu (Python Urban Data Model) - Core library"

[features]
default = ["proj", "umep", "gdal", "reqwest", "csv", "encoding_rs", "polars", "las", "zip", "tempfile", "geos", "chrono", "quick-xml"]
wasm = []
umep = []

[dependencies]
# GeoRust ecosystem
geo = { version = "0.28", features = ["serde"] }
geojson = "0.24"
geos = { version = "10.0", features = ["geo"], optional = true }
geotiff = { version = "0.1", optional = true }
proj = { version = "0.28", optional = true }
gdal = { version = "0.19", features = ["bindgen"], optional = true }
rstar = "0.12"

# Data processing
polars = { version = "0.51", features = ["lazy", "temporal", "strings"], optional = true }
# wkb = "0.3"  # Not needed - using geos for WKB conversion instead

# HTTP and serialization
reqwest = { version = "0.12", features = ["json", "blocking"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"], optional = true }
url = "2.5"
csv = { version = "1.3", optional = true }
quick-xml = { version = "0.31", features = ["serialize"], optional = true }
encoding_rs = { version = "0.8", optional = true }
urlencoding = "2.1"
zip = { version = "0.6", optional = true }
tempfile = { version = "3.8", optional = true }

# LiDAR processing
las = { version = "0.9", features = ["laz-parallel"], optional = true }

# UMEP integration (optional - only when umep feature is enabled)
# Note: umep_rust may not be available as a crate, comment out if not needed
# umep_rust = { version = "0.1", optional = true }

[[bin]]
name = "rsmdu"
path = "src/main.rs"

