[package]
name = "rsmdu"
version = "0.1.1"
edition = "2021"
description = "Rust transpilation of pymdu (Python Urban Data Model) - Core library"
license = "GPL-3.0"
repository = "https://github.com/rupeelab17/rsmdu"
homepage = "https://github.com/rupeelab17/rsmdu"
documentation = "https://github.com/rupeelab17/rsmdu#readme"

[features]
default = ["proj", "umep", "gdal", "reqwest", "csv", "encoding_rs", "polars", "las", "zip", "tempfile", "geos", "chrono", "quick-xml", "indicatif"]
wasm = []
umep = []

[dependencies]
# GeoRust ecosystem
geo = { version = "0.28", features = ["serde"] }
geojson = "0.24"
geos = { version = "10.0", features = ["geo"], optional = true }
geotiff = { version = "0.1", optional = true }
proj = { version = "0.28", optional = true }
gdal = { version = "0.19", features = ["bindgen"], optional = true }
rstar = "0.12"

# Data processing
polars = { version = "0.51", features = ["lazy", "temporal", "strings"], optional = true }
# wkb = "0.3"  # Not needed - using geos for WKB conversion instead

# HTTP and serialization
# Use rustls instead of default-tls (OpenSSL) for manylinux CI compatibility
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false, optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"], optional = true }
url = "2.5"
csv = { version = "1.3", optional = true }
quick-xml = { version = "0.31", features = ["serialize"], optional = true }
encoding_rs = { version = "0.8", optional = true }
urlencoding = "2.1"
zip = { version = "0.6", optional = true }
tempfile = { version = "3.8", optional = true }
indicatif = { version = "0.17", optional = true }

# LiDAR processing
las = { version = "0.9", features = ["laz-parallel"], optional = true }
laz = { version = "0.10", optional = true }

# UMEP integration (optional - only when umep feature is enabled)
# Note: umep_rust may not be available as a crate, comment out if not needed
# umep_rust = { version = "0.1", optional = true }

# [[bin]]
# name = "rsmdu"
# path = "src/main.rs"

[lib]
name = "rsmdu"
crate-type = ["rlib", "cdylib"]